# AdventOfCode

./: aoc-setupday
2015/day01/: CMakeLists.txt  main.cpp
2015/day02/: CMakeLists.txt  main.cpp
2015/day03/: CMakeLists.txt  main.cpp
2015/day04/: CMakeLists.txt  main.cpp  md5.h
2015/day05/: CMakeLists.txt  input-test-part2.txt  main.cpp
2015/day06/: CMakeLists.txt  input-test-part1-1.txt  main.cpp
2019/day01/: CMakeLists.txt  main.cpp
2020/day01/: CMakeLists.txt  main.cpp
2020/day02/: CMakeLists.txt  main.cpp
2020/day03/: CMakeLists.txt  main.cpp
2020/day04/: CMakeLists.txt  main.cpp
2020/day05/: CMakeLists.txt  main.cpp
2020/day06/: CMakeLists.txt  input-test-part1-1.txt  main.cpp
2020/day07/: CMakeLists.txt  main.cpp
2020/day08/: CMakeLists.txt  main.cpp
2020/day09/: CMakeLists.txt  main.cpp
2020/day10/: CMakeLists.txt  main.cpp
2020/day11/: CMakeLists.txt  main.cpp
2020/day12/: CMakeLists.txt  main.cpp
2020/day13/: CMakeLists.txt  main.cpp
2020/day15/: CMakeLists.txt  main.cpp
2020/day16/: CMakeLists.txt  main.cpp
2021/day01/: CMakeLists.txt  main.cpp
2021/day02/: main.cpp
2021/day03/: main.cpp
2021/day04/: main.cpp
2021/day05/: main.cpp
2021/day06/: main.cpp
aoccommon/: aoc.cpp  aoc.h
